monticore-generator/src/test/resources/cocos/invalid/A4031/A4031b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4031;

grammar A4031b {
  abstract a;

}
